--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="src/views/swper/jquery-1.11.1.min.js"></script>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">2121212</div>
 <script src="/static/build.js"></script>
 </body>
 </html>
